URL to published site added

--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
     height: 16px</code></pre>
 </div>
 
+<p>Выложено на <a href="https://svg-vs-html-icons.netlify.com/">https://svg-vs-html-icons.netlify.com/</a></p>
+	
 </section>
 
 </body>
